--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -17,7 +17,7 @@ authors = []
 
 readme = "README.md"
 
-repository = "https://github.com/sobolevn/safe-assert"
+repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"
 
 keywords = []
 
