--- a/{{cookiecutter.project_name}}/.travis.yml
+++ b/{{cookiecutter.project_name}}/.travis.yml
@@ -6,7 +6,7 @@ python:
   - 3.7
 
 env:
-  - POETRY_VERSION=1.0.0
+  - POETRY_VERSION=1.0.3
 
 before_install:
   - pip freeze | xargs pip uninstall -y
@@ -15,6 +15,11 @@ before_install:
 
 install: poetry install
 script: make test
+
+after_success:
+  # Send coverage to coveralls:
+  - pip install coveralls
+  - coveralls
 
 notifications:
   email:
