--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ exclude =
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
   tests/*.py: S101, WPS226, WPS432
-  # Allow `print` function for hooks:
-  hooks/*.py: WPS226, T001
+  hooks/*.py: WPS226
 
 
 [isort]
