--- a/{{cookiecutter.project_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+{% raw %}name: test
 
 on: [push, pull_request]
 
@@ -36,4 +36,4 @@ jobs:
     - name: Run checks
       run: |
         source "$HOME/.poetry/env"
-        make test
+        make test{% endraw %}
