--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -14,7 +14,9 @@ unit:
 package:
 	poetry check
 	pip check
-	safety check --bare --full-report
+	# Ignoring sphinx@2 security issue for now, see:
+  # https://github.com/miyakogi/m2r/issues/51
+	safety check --full-report -i 38330
 
 .PHONY: test
 test: lint unit package
