--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -44,6 +44,7 @@ default_section = FIRSTPARTY
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
 line_length = 80
+indent = 4
 
 
 [darglint]
