--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -2,21 +2,20 @@ SHELL:=/usr/bin/env bash
 
 .PHONY: lint
 lint:
-	mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests/**/*.py
-	flake8 .
-	doc8 -q docs
+	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests/**/*.py tests/**/*.py
+	poetry run flake8 .
+	poetry run doc8 -q docs
 
 .PHONY: unit
 unit:
-	pytest
+	poetry run pytest
 
 .PHONY: package
 package:
 	poetry check
-	pip check
-	# Ignoring sphinx@2 security issue for now, see:
-  # https://github.com/miyakogi/m2r/issues/51
-	safety check --full-report -i 38330
+	poetry run pip check
+	poetry run safety check --full-report
 
 .PHONY: test
 test: lint package unit
+
