--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 
 [tool.nitpick]
@@ -20,7 +20,7 @@ license = "MIT"
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.6,<3.9"
 
 cookiecutter = "^1.7"
 jinja2-git = "^1.1"
