--- a/{{cookiecutter.project_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -21,25 +21,26 @@ jobs:
         curl -sSL \
           "https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py" | python
 
+        # Adding `poetry` to `$PATH`:
+        echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+
     - name: Set up cache
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: .venv
         key: venv-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
     - name: Install dependencies
       run: |
-        source "$HOME/.poetry/env"
         poetry config virtualenvs.in-project true
         poetry install
 
     - name: Run checks
       run: |
-        source "$HOME/.poetry/env"
         make test
-        
+
     # Uncomment these lines if you wish to upload coverage to codecov:
     # https://codecov.io/
-    # - name: Upload coverage to Codecov  
+    # - name: Upload coverage to Codecov
     #   uses: codecov/codecov-action@v1
     #   with:
     #     file: ./coverage.xml
