--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 
 [tool.nitpick]
@@ -9,8 +9,8 @@ style = "https://raw.githubusercontent.com/wemake-services/wemake-python-stylegu
 
 [tool.poetry]
 name = "{{ cookiecutter.project_name }}"
-version = "0.1.0"
 description = "{{ cookiecutter.project_description }}"
+version = "0.1.0"
 license = "{{ cookiecutter.license|upper }}"
 
 authors = []
@@ -29,7 +29,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6,<3.9"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.780"
@@ -44,8 +44,8 @@ pytest = "^5.4"
 pytest-cov = "^2.10"
 pytest-randomly = "^3.4"
 
-sphinx = "^2.2"
-sphinx-autodoc-typehints = "^1.10"
+sphinx = "^3.1"
+sphinx-autodoc-typehints = "^1.11"
 doc8 = "^0.8"
-m2r = "^0.2"
+m2r2 = "^0.2"
 tomlkit = "^0.6"
