--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -2,7 +2,7 @@ SHELL:=/usr/bin/env bash
 
 .PHONY: lint
 lint:
-	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests/**/*.py tests/**/*.py
+	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests/**/*.py
 	poetry run flake8 .
 	poetry run doc8 -q docs
 
