--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -v venv .venv
+        python -m venv .venv
         source .venv/bin/activate
         POETRY_VIRTUALENVS_CREATE=false poetry install
 
