--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -10,6 +10,11 @@ show-source = True
 statistics = False
 doctests = True
 
+# darglint configuration:
+# https://github.com/terrencepreilly/darglint
+strictness = long
+docstring-style = numpy
+
 # Plugins:
 max-complexity = 6
 max-line-length = 80
@@ -40,17 +45,9 @@ per-file-ignores =
 # https://github.com/timothycrosley/isort/wiki/isort-Settings
 include_trailing_comma = true
 use_parentheses = true
-default_section = FIRSTPARTY
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
 line_length = 80
-indent = 4
-
-
-[darglint]
-# darglint configuration:
-# https://github.com/terrencepreilly/darglint
-strictness = long
 
 
 [tool:pytest]
@@ -59,12 +56,14 @@ norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
 
 # Extra options:
 addopts =
-  --strict
+  --strict-markers
+  --strict-config
   --tb=short
   --doctest-modules
   --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
   --cov-report=term:skip-covered
   --cov-report=html
+  --cov-report=xml
   --cov-branch
   --cov-fail-under=100
 
