--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -29,12 +29,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6,<3.9"
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.800"
 
-wemake-python-styleguide = "^0.14"
+wemake-python-styleguide = "^0.15"
 flake8-pytest-style = "^1.3"
 nitpick = "^0.23"
 
