--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -9,6 +9,11 @@ format = wemake
 show-source = True
 statistics = False
 doctests = True
+inline-quotes = double
+max-complexity = 10
+max-line-complexity = 23
+max-local-variables = 9
+max-methods = 8
 
 # darglint configuration:
 # https://github.com/terrencepreilly/darglint
@@ -33,11 +38,21 @@ exclude =
   .venv
   .eggs
   *.egg
+  tests/fixtures/**
+  tests/**/snapshots/**
+  .history/**
+
+# my set of difficult to abide rules
+ignore =
+	WPS305, WPS237, WPS110, WPS226, WPS323, WPS337, WPS111
+	W503, WPS428
 
 # Ignoring some errors in some files:
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
   tests/*.py: S101, WPS226, WPS432
+  # otherwise requires docstrings for empty __init__.py
+  */__init__.py: D104
 
 
 [isort]
@@ -52,7 +67,7 @@ line_length = 80
 
 [tool:pytest]
 # Directories that are not visited by pytest collector:
-norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
+norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__ .history
 
 # Extra options:
 addopts =
@@ -65,8 +80,11 @@ addopts =
   --cov-report=html
   --cov-report=xml
   --cov-branch
-  --cov-fail-under=100
+  # breaks vscode test discovery: https://github.com/microsoft/vscode-python/issues/11729
+#   --cov-fail-under=100
 
+[coverage:run]
+omit= sandbox.py
 
 [mypy]
 # mypy configurations: http://bit.ly/2zEl9WI
