- exclusion for ./sandbox.py

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -38,9 +38,11 @@ exclude =
   .venv
   .eggs
   *.egg
+  dist
   tests/fixtures/**
   tests/**/snapshots/**
   .history/**
+  sandbox.py
 
 # my set of difficult to abide rules
 ignore =
@@ -67,7 +69,17 @@ line_length = 80
 
 [tool:pytest]
 # Directories that are not visited by pytest collector:
-norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__ .history
+norecursedirs =
+  *.egg
+  .eggs
+  dist
+  build
+  docs
+  .tox
+  .git
+  __pycache__
+  .history
+  sandbox.py
 
 # Extra options:
 addopts =
