- cleaned setup.cfg

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -9,11 +9,6 @@ format = wemake
 show-source = True
 statistics = False
 doctests = True
-inline-quotes = double
-max-complexity = 10
-max-line-complexity = 23
-max-local-variables = 9
-max-methods = 8
 
 # darglint configuration:
 # https://github.com/terrencepreilly/darglint
@@ -21,7 +16,7 @@ strictness = long
 docstring-style = numpy
 
 # Plugins:
-max-complexity = 6
+max-complexity = 10
 max-line-length = 80
 
 # wemake-python-styleguide settings:
@@ -30,32 +25,32 @@ i-control-code = False
 # Disable some pydocstyle checks:
 # Exclude some pydoctest checks globally:
 ignore = D100, D104, D106, D401, W504, X100, RST303, RST304, DAR103, DAR203
+    WPS305, WPS237, WPS110, WPS226, WPS323, WPS337, WPS111, W503, WPS428
 
 # Excluding some directories:
 exclude =
-  .git
-  __pycache__
-  .venv
-  .eggs
-  *.egg
-  dist
-  tests/fixtures/**
-  tests/**/snapshots/**
-  .history/**
-  sandbox.py
-
-# my set of difficult to abide rules
-ignore =
-	WPS305, WPS237, WPS110, WPS226, WPS323, WPS337, WPS111
-	W503, WPS428
+    .git
+    __pycache__
+    .venv
+    .eggs
+    *.egg
+    tests/fixtures/**
+    tests/**/snapshots/**
+    .history/**
+    sandbox.py
 
 # Ignoring some errors in some files:
 per-file-ignores =
-  # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432
-  # otherwise requires docstrings for empty __init__.py
-  */__init__.py: D104
+    # Enable `assert` keyword and magic numbers for tests:
+    tests/*.py: S101, WPS226, WPS432
+    # otherwise requires docstrings for empty __init__.py
+    */__init__.py: D104
 
+# add on custom
+inline-quotes = double
+max-line-complexity = 23
+max-local-variables = 9
+max-methods = 8
 
 [isort]
 # isort configuration:
@@ -70,33 +65,22 @@ line_length = 80
 [tool:pytest]
 # Directories that are not visited by pytest collector:
 norecursedirs =
-  *.egg
-  .eggs
-  dist
-  build
-  docs
-  .tox
-  .git
-  __pycache__
-  .history
-  sandbox.py
+    *.egg .eggs dist build docs .tox .git __pycache__ .history sandbox.py
 
 # Extra options:
 addopts =
-  --strict-markers
-  --strict-config
-  --tb=short
-  --doctest-modules
-  --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
-  --cov-report=term:skip-covered
-  --cov-report=html
-  --cov-report=xml
-  --cov-branch
-  # breaks vscode test discovery: https://github.com/microsoft/vscode-python/issues/11729
-#   --cov-fail-under=100
+    --strict-markers
+    --strict-config
+    --tb=short
+    --doctest-modules
+    --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
+    --cov-report=term:skip-covered
+    --cov-report=html
+    --cov-report=xml
+    --cov-branch
+    # breaks vscode test discovery: https://github.com/microsoft/vscode-python/issues/11729
+    # --cov-fail-under=100
 
-[coverage:run]
-omit= sandbox.py
 
 [mypy]
 # mypy configurations: http://bit.ly/2zEl9WI
