--- a/ .readthedocs.yml
+++ b/ .readthedocs.yml
@@ -1,7 +1,11 @@
 version: 2
 
+build:
+  os: ubuntu-20.04
+  tools:
+    python: '3.9'
+
 python:
-  version: 3.8
   install:
     - requirements: '{{cookiecutter.project_name}}/docs/requirements.txt'
 
