- merged upstream and migrate vscode_init procedure to cookiecutter method

--- a/{{cookiecutter.project_name}}/.gitignore
+++ b/{{cookiecutter.project_name}}/.gitignore
@@ -213,5 +213,5 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# vscode local history ext
-.history/
+# pyenv
+.python-version
