--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -6,9 +6,9 @@
 # Base flake8 configuration:
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 format = wemake
-show-source = True
-statistics = False
-doctests = True
+show-source = true
+statistics = false
+doctests = true
 
 # darglint configuration:
 # https://github.com/terrencepreilly/darglint
@@ -20,7 +20,7 @@ max-complexity = 10
 max-line-length = 80
 
 # wemake-python-styleguide settings:
-i-control-code = False
+i-control-code = false
 
 # Disable some pydocstyle checks:
 # Exclude some pydoctest checks globally:
@@ -66,6 +66,9 @@ line_length = 80
 # Directories that are not visited by pytest collector:
 norecursedirs =
     *.egg .eggs dist build docs .tox .git __pycache__ .history sandbox.py
+
+# Strict `@xfail` by default:
+xfail_strict = true
 
 # Extra options:
 addopts =
