--- a/{{cookiecutter.project_name}}/.readthedocs.yml
+++ b/{{cookiecutter.project_name}}/.readthedocs.yml
@@ -7,7 +7,10 @@ build:
 
 python:
   install:
-    - requirements: 'docs/requirements.txt'
+    - method: pip
+      path: '{{cookiecutter.project_name}}'
+      extra_requirements:
+        - docs
 
 sphinx:
   configuration: 'docs/conf.py'
