Fix path in template

--- a/{{cookiecutter.project_name}}/.readthedocs.yml
+++ b/{{cookiecutter.project_name}}/.readthedocs.yml
@@ -8,7 +8,7 @@ build:
 python:
   install:
     - method: pip
-      path: '{{cookiecutter.project_name}}'
+      path: .
       extra_requirements:
         - docs
 
