--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -31,11 +31,11 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 
-# Docs
-sphinx                   = { version = "^4.5",  optional = true }
+# Docs, optional, use `poetry install -E docs` to install them:
+sphinx = { version = "^4.5",  optional = true }
 sphinx-autodoc-typehints = { version = "^1.18", optional = true }
-m2r2                     = { version = "^0.3",  optional = true }
-tomlkit                  = { version = "^0.10", optional = true }
+m2r2 = { version = "^0.3",  optional = true }
+tomlkit = { version = "^0.10", optional = true }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.942"
