- fix flake8 path issue - adopted single quote for string

--- a/{{cookiecutter.project_name}}/.vscode/settings.json
+++ b/{{cookiecutter.project_name}}/.vscode/settings.json
@@ -18,4 +18,5 @@
       "activityBar.activeBorder": "#FACF3F",
       "activityBar.foreground": "#e7e7e7",
   },
+  "python.linting.flake8Path": "flake8",
 }
