--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -73,6 +73,8 @@ addopts =
 
 [mypy]
 # mypy configurations: http://bit.ly/2zEl9WI
+enable_error_code = truthy-bool, redundant-expr, unused-awaitable
+
 allow_redefinition = False
 check_untyped_defs = True
 disallow_any_explicit = True
