--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -64,7 +64,7 @@ addopts =
   --tb=short
   --doctest-modules
   --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
-  --cov-report=term:skip-covered
+  --cov-report=term-missing:skip-covered
   --cov-report=html
   --cov-report=xml
   --cov-branch
