--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@
 # Base flake8 configuration:
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 format = wemake
-show-source = True
-statistics = False
-doctests = True
+show-source = true
+statistics = false
+doctests = true
 
 # darglint configuration:
 # https://github.com/terrencepreilly/darglint
@@ -42,11 +42,7 @@ per-file-ignores =
 [isort]
 # isort configuration:
 # https://github.com/timothycrosley/isort/wiki/isort-Settings
-include_trailing_comma = true
-use_parentheses = true
-# See https://github.com/timothycrosley/isort#multi-line-output-modes
-multi_line_output = 3
-line_length = 80
+profile = wemake
 
 
 [tool:pytest]
