--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -71,27 +71,27 @@ addopts =
 # mypy configurations: http://bit.ly/2zEl9WI
 enable_error_code = truthy-bool, redundant-expr, unused-awaitable
 
-allow_redefinition = False
-check_untyped_defs = True
-disallow_any_explicit = True
-disallow_any_generics = True
-disallow_untyped_calls = True
-ignore_errors = False
-ignore_missing_imports = True
-implicit_reexport = False
-local_partial_types = True
-strict_optional = True
-strict_equality = True
-no_implicit_optional = True
-warn_no_return = True
-warn_unused_ignores = True
-warn_redundant_casts = True
-warn_unused_configs = True
-warn_unreachable = True
+allow_redefinition = false
+check_untyped_defs = true
+disallow_any_explicit = true
+disallow_any_generics = true
+disallow_untyped_calls = true
+ignore_errors = false
+ignore_missing_imports = true
+implicit_reexport = false
+local_partial_types = true
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_no_return = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unreachable = true
 
 
 [doc8]
 # doc8 configuration: https://pypi.org/project/doc8/
 ignore-path = docs/_build
 max-line-length = 80
-sphinx = True
+sphinx = true
