--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,12 +1,3 @@
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-
-[tool.nitpick]
-style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
-
-
 [tool.poetry]
 name = "{{ cookiecutter.project_name }}"
 description = "{{ cookiecutter.project_description }}"
@@ -31,13 +22,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 
-# Docs, optional, use `poetry install -E docs` to install them:
-sphinx = { version = "^5.2",  optional = true }
-sphinx-autodoc-typehints = { version = "^1.19", optional = true }
-m2r2 = { version = "^0.3",  optional = true }
-tomlkit = { version = "^0.11", optional = true }
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.test.dependencies]
 mypy = "^0.982"
 
 wemake-python-styleguide = "^0.17"
@@ -45,11 +30,26 @@ flake8-pytest-style = "^1.6"
 doc8 = "^1.0"
 nitpick = "^0.32"
 
-safety = "^2.2"
+safety = "^2.3"
 
 pytest = "^7.1"
 pytest-cov = "^4.0"
 pytest-randomly = "^3.12"
 
-[tool.poetry.extras]
-docs = ["sphinx", "sphinx-autodoc-typehints", "m2r2", "tomlkit"]
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^5.2"
+sphinx-autodoc-typehints = "^1.19"
+m2r2 = "^0.3"
+tomli = "^2.0"
+
+
+[build-system]
+requires = ["poetry-core>=1.2.0"]
+build-backend = "poetry.core.masonry.api"
+
+
+[tool.nitpick]
+style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
