--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,11 @@ per-file-ignores =
 [isort]
 # isort configuration:
 # https://github.com/timothycrosley/isort/wiki/isort-Settings
-profile = wemake
+include_trailing_comma = true
+use_parentheses = true
+# See https://github.com/timothycrosley/isort#multi-line-output-modes
+multi_line_output = 3
+line_length = 80
 
 
 [tool:pytest]
