--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -37,7 +37,7 @@ exclude =
 # Ignoring some errors in some files:
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432
+  tests/*.py: S101, WPS226, WPS432, WPS437
 
 
 [isort]
@@ -92,6 +92,7 @@ warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
 warn_unreachable = True
+follow_imports = skip
 
 
 [doc8]
