- added python extensiosn

--- a/{{cookiecutter.project_name}}/.vscode/extensions.json
+++ b/{{cookiecutter.project_name}}/.vscode/extensions.json
@@ -7,12 +7,16 @@
         "almenon.arepl",
         "batisteo.vscode-django",
         "bungcip.better-toml",
+        "cstrap.python-snippets",
+        "donjayamanne.python-environment-manager",
+        "donjayamanne.python-extension-pack",
         "guyskk.language-cython",
         "leonhard-s.python-sphinx-highlight",
         "magicstack.magicpython",
         "matangover.mypy",
         "mgesbert.python-path",
         "ms-python.flake8",
+        "ms-python.isort",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-python.vscode-pylance",
