--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,3 @@
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-
-[tool.nitpick]
-style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
-
-
 [tool.poetry]
 name = "wemake-python-package"
 description = "Bleeding edge cookiecutter template to create new python packages"
@@ -23,14 +14,14 @@ license = "MIT"
 python = "^3.7"
 
 cookiecutter = "^2.1"
-jinja2-git = "^1.1"
+jinja2-git = "^1.3"
 lice = "^0.6"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.test.dependencies]
 binaryornot = "^0.4"
 
-wemake-python-styleguide = "^0.16"
+wemake-python-styleguide = "^0.17"
 flake8-pytest-style = "^1.6"
 nitpick = "^0.32"
 
@@ -38,5 +29,14 @@ pytest = "^7.1"
 pytest-randomly = "^3.12"
 pytest-cookies = "^0.6"
 
-safety = "^1.10"
-tomlkit = "^0.11"
+safety = "^2.3"
+tomli = "^2.0"
+
+
+[build-system]
+requires = ["poetry-core>=1.2.0"]
+build-backend = "poetry.core.masonry.api"
+
+
+[tool.nitpick]
+style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
