- manually sync with upstream

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -69,9 +69,6 @@ norecursedirs =
 # Strict `@xfail` by default:
 xfail_strict = true
 
-# Strict `@xfail` by default:
-xfail_strict = true
-
 # Extra options:
 addopts =
     --strict-markers
@@ -79,7 +76,7 @@ addopts =
     --tb=short
     --doctest-modules
     --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
-    --cov-report=term:skip-covered
+    --cov-report=term-missing:skip-covered
     --cov-report=html
     --cov-report=xml
     --cov-branch
