--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,12 +1,3 @@
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-
-[tool.nitpick]
-style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
-
-
 [tool.poetry]
 name = "{{ cookiecutter.project_name }}"
 description = "{{ cookiecutter.project_description }}"
@@ -37,19 +28,19 @@ sphinx-autodoc-typehints = { version = "^1.18", optional = true }
 m2r2 = { version = "^0.3",  optional = true }
 tomlkit = { version = "^0.11", optional = true }
 
-[tool.poetry.dev-dependencies]
-mypy = "^0.961"
+[tool.poetry.group.test.dependencies]
+mypy = "^0.982"
 
-wemake-python-styleguide = "^0.16"
+wemake-python-styleguide = "^0.17"
 flake8-pytest-style = "^1.6"
-doc8 = "^0.11"
 nitpick = "^0.32"
 
-safety = "^1.10"
+safety = "^2.3"
 
 pytest = "^7.1"
-pytest-cov = "^3.0"
+pytest-cov = "^4.0"
 pytest-randomly = "^3.12"
 
-[tool.poetry.extras]
-docs = ["sphinx", "sphinx-autodoc-typehints", "m2r2", "tomlkit"]
+[build-system]
+requires = ["poetry-core>=1.2.0"]
+build-backend = "poetry.core.masonry.api"
