--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -69,7 +69,14 @@ addopts =
 
 [mypy]
 # mypy configurations: http://bit.ly/2zEl9WI
-enable_error_code = truthy-bool, redundant-expr, unused-awaitable
+enable_error_code =
+  truthy-bool,
+  truthy-iterable,
+  redundant-expr,
+  unused-awaitable,
+  ignore-without-code,
+  possibly-undefined,
+  redundant-self,
 
 allow_redefinition = false
 check_untyped_defs = true
