--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 
-[tool.poetry.group.test.dependencies]
+[tool.poetry.group.dev.dependencies]
 mypy = "^1.7"
 
 wemake-python-styleguide = "^0.17"
