--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -82,6 +82,7 @@ allow_redefinition = false
 check_untyped_defs = true
 disallow_any_explicit = true
 disallow_any_generics = true
+disallow_incomplete_defs = true
 disallow_untyped_calls = true
 ignore_errors = false
 ignore_missing_imports = true
