Update package structure, drop 3.8 support

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -2,7 +2,7 @@ SHELL:=/usr/bin/env bash
 
 .PHONY: lint
 lint:
-	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests/**/*.py
+	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests
 	poetry run flake8 .
 	if poetry run command -v doc8 > /dev/null 2>&1; then poetry run doc8 -q docs; fi
 
@@ -14,7 +14,6 @@ unit:
 package:
 	poetry check
 	poetry run pip check
-	poetry run safety check --full-report
 
 .PHONY: test
 test: lint package unit
