--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,17 @@ line_length = 80
 
 [tool:pytest]
 # Directories that are not visited by pytest collector:
-norecursedirs = {{cookiecutter.project_name}} hooks *.egg .eggs dist build docs .tox .git __pycache__
+norecursedirs =
+  {{cookiecutter.project_name}}
+  hooks
+  *.egg
+  .eggs
+  dist
+  build
+  docs
+  .tox
+  .git
+  __pycache__
 
 # Strict `@xfail` by default:
 xfail_strict = true
