--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -78,23 +78,9 @@ enable_error_code =
   possibly-undefined,
   redundant-self,
 
-allow_redefinition = false
-check_untyped_defs = true
-disallow_any_explicit = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-disallow_untyped_calls = true
-ignore_errors = false
+explicit_package_bases = true
 ignore_missing_imports = true
-implicit_reexport = false
-local_partial_types = true
-strict_optional = true
-strict_equality = true
-no_implicit_optional = true
-warn_no_return = true
-warn_unused_ignores = true
-warn_redundant_casts = true
-warn_unused_configs = true
+strict = true
 warn_unreachable = true
 
 
