--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v4
@@ -47,5 +48,4 @@ jobs:
         poetry run pytest
         poetry run poetry check
         poetry run pip check
-        poetry run safety check --full-report
         poetry run sh tests/test_integration.sh
