Remove deprecated nitpick (#531)
* - ignore WPS437 Forbid protected attributes
and methods, for pytest files
- added mypy ignore thirdpary module

* - ignore WPS437 Forbid protected attributes
and methods, for pytest files
- added mypy ignore thirdpary module

* removed Nitpick after wemake python remove its support

---------

Co-authored-by: Killian Blais <codekoriko@users.noreply.github.com>

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -37,7 +37,7 @@ exclude =
 # Ignoring some errors in some files:
 per-file-ignores =
   # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432
+  tests/*.py: S101, WPS226, WPS432, WPS437
 
 
 [isort]
