--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -1,6 +1,6 @@
 # All configuration for plugins and other utils is defined here.
 # Read more about `setup.cfg`:
-# https://docs.python.org/3/distutils/configfile.html
+# https://docs.python.org/3.11/distutils/configfile.html
 
 [flake8]
 # Base flake8 configuration:
@@ -10,82 +10,19 @@ show-source = true
 statistics = false
 doctests = true
 
-# darglint configuration:
-# https://github.com/terrencepreilly/darglint
-strictness = long
-docstring-style = numpy
-
 # Plugins:
 max-complexity = 6
 max-line-length = 80
 
-# wemake-python-styleguide settings:
-i-control-code = false
-
-# Disable some pydocstyle checks:
-# Exclude some pydoctest checks globally:
-ignore = D100, D104, D106, D401, W504, X100, RST303, RST304, DAR103, DAR203
+# We only run wemake-python-styleguide and system checks:
+select = WPS, E99
 
 # Excluding some directories:
-exclude =
-  .git
-  __pycache__
+extend-exclude =
   .venv
-  .eggs
-  *.egg
+  {{cookiecutter.project_name}}
 
 # Ignoring some errors in some files:
 per-file-ignores =
-  # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432, WPS437
-
-
-[isort]
-# isort configuration:
-# https://pycqa.github.io/isort/docs/configuration/options.html
-profile = wemake
-
-
-[tool:pytest]
-# Directories that are not visited by pytest collector:
-norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
-
-# Strict `@xfail` by default:
-xfail_strict = true
-
-# Extra options:
-addopts =
-  --strict-markers
-  --strict-config
-  --tb=short
-  --doctest-modules
-  --cov={{ cookiecutter.project_name.lower().replace('-', '_') }}
-  --cov-report=term-missing:skip-covered
-  --cov-report=html
-  --cov-report=xml
-  --cov-branch
-  --cov-fail-under=100
-
-
-[mypy]
-# mypy configurations: http://bit.ly/2zEl9WI
-enable_error_code =
-  truthy-bool,
-  truthy-iterable,
-  redundant-expr,
-  unused-awaitable,
-  ignore-without-code,
-  possibly-undefined,
-  redundant-self,
-
-explicit_package_bases = true
-ignore_missing_imports = true
-strict = true
-warn_unreachable = true
-
-
-[doc8]
-# doc8 configuration: https://pypi.org/project/doc8/
-ignore-path = docs/_build
-max-line-length = 80
-sphinx = true
+  # Enable string overuse tests:
+  tests/*.py: WPS226
