--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 # All configuration for plugins and other utils is defined here.
 # Read more about `setup.cfg`:
-# https://docs.python.org/3/distutils/configfile.html
+# https://docs.python.org/3.11/distutils/configfile.html
 
 [flake8]
 # Base flake8 configuration:
@@ -10,65 +10,19 @@ show-source = true
 statistics = false
 doctests = true
 
-# darglint configuration:
-# https://github.com/terrencepreilly/darglint
-strictness = long
-docstring-style = numpy
-
 # Plugins:
 max-complexity = 6
 max-line-length = 80
 
-# Disable some pydocstyle checks:
-# Exclude some pydoctest checks globally:
-ignore = D100, D104, D106, D401, W504, X100, RST303, RST304, DAR103, DAR203
+# We only run wemake-python-styleguide and system checks:
+select = WPS, E99
 
 # Excluding some directories:
-exclude =
-  .git
-  __pycache__
+extend-exclude =
   .venv
-  .eggs
-  *.egg
   {{cookiecutter.project_name}}
 
 # Ignoring some errors in some files:
 per-file-ignores =
-  # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS226, WPS432
-  hooks/*.py: WPS226
-
-
-[isort]
-# isort configuration:
-# https://github.com/timothycrosley/isort/wiki/isort-Settings
-include_trailing_comma = true
-use_parentheses = true
-# See https://github.com/timothycrosley/isort#multi-line-output-modes
-multi_line_output = 3
-line_length = 80
-
-
-[tool:pytest]
-# Directories that are not visited by pytest collector:
-norecursedirs =
-  {{cookiecutter.project_name}}
-  hooks
-  *.egg
-  .eggs
-  dist
-  build
-  docs
-  .tox
-  .git
-  __pycache__
-
-# Strict `@xfail` by default:
-xfail_strict = true
-
-# Extra options:
-addopts =
-  --strict-markers
-  --strict-config
-  --tb=short
-  --doctest-modules
+  # Enable string overuse tests:
+  tests/*.py: WPS226
