--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -2,8 +2,10 @@ SHELL:=/usr/bin/env bash
 
 .PHONY: lint
 lint:
-	poetry run mypy {{ cookiecutter.project_name.lower().replace('-', '_') }} tests
+	poetry run ruff check --exit-non-zero-on-fix --diff
+	poetry run ruff format --check --diff
 	poetry run flake8 .
+	poetry run mypy .
 	if poetry run command -v doc8 > /dev/null 2>&1; then poetry run doc8 -q docs; fi
 
 .PHONY: unit
