--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,15 +142,10 @@ addopts = [
   "--strict-config",
   "--strict-markers",
   "--doctest-modules",
-  # Output:
   "--tb=short",
-  # Coverage:
-  "--cov={{ cookiecutter.project_name.lower().replace('-', '_') }}",
-  "--cov-report=term-missing:skip-covered",
-  "--cov-report=html",
-  "--cov-report=xml",
-  "--cov-branch",
-  "--cov-fail-under=100",
+  # Custom template parts:
+  "--ignore={{cookiecutter.project_name}}",
+  "--ignore=hooks",
 ]
 
 
