--- a/{{cookiecutter.project_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+{% raw %}name: test
 
 on:
   push:
@@ -48,3 +48,9 @@ jobs:
     - name: Run checks
       run: |
         make test
+
+    # Upload coverage to codecov: https://codecov.io/
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml{% endraw %}
