--- a/{{cookiecutter.project_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/test.yml
@@ -53,4 +53,5 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.xml{% endraw %}
+        files: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}{% endraw %}
