--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,8 @@ jobs:
 
     - name: Run checks
       run: |
-        poetry run ruff check --exit-non-zero-on-fix --diff
-        poetry run ruff format --check --diff
+        poetry run ruff check --exit-non-zero-on-fix
+        poetry run ruff format --check
         poetry run flake8 .
         poetry run mypy .
         poetry run pytest
