--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -2,8 +2,8 @@ SHELL:=/usr/bin/env bash
 
 .PHONY: lint
 lint:
-	poetry run ruff check --exit-non-zero-on-fix --diff
-	poetry run ruff format --check --diff
+	poetry run ruff check --exit-non-zero-on-fix
+	poetry run ruff format --check
 	poetry run flake8 .
 	poetry run mypy .
 
