--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Run checks
       run: |
-        poetry run ruff check --exit-non-zero-on-fix --diff
+        poetry run ruff check --exit-non-zero-on-fix
         poetry run ruff format --check --diff
         poetry run flake8 .
         poetry run mypy .
