--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,3 +26,12 @@ updates:
   open-pull-requests-limit: 10
   cooldown:
     default-days: 7
+
+- package-ecosystem: github-actions
+  directory: "/{{cookiecutter.project_name}}"
+  schedule:
+    interval: daily
+    time: "02:00"
+  open-pull-requests-limit: 10
+  cooldown:
+    default-days: 7
