--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,20 @@ repos:
     hooks:
       - id: shellcheck
 
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.14.10
+    hooks:
+      - id: ruff
+        args: ["--exit-non-zero-on-fix"]
+      - id: ruff-format
+
+  - repo: https://github.com/EbodShojaei/bake
+    rev: v1.4.4
+    hooks:
+      - id: mbake-format
+        args: ["--config=.github/bake.toml"]
+      - id: mbake-validate
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
