--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,15 @@ requires = ["poetry-core>=2.0"]
 build-backend = "poetry.core.masonry.api"
 
 
-[project]
+[tool.poetry]
 name = "wemake-python-package"
 description = "Bleeding edge cookiecutter template to create new python packages"
 version = "0.1.0"
-requires-python = ">=3.10,<3.14"
 readme = "README.md"
 authors = [
-  { name = "Nikita Sobolev", email = "mail@sobolevn.me" },
+  "Nikita Sobolev <mail@sobolevn.me>",
 ]
 license = "MIT"
-dynamic = ["dependencies", "classifiers"]
-
-
-[tool.poetry]
 package-mode = false
 classifiers = [
   "Private :: Do not Upload",
@@ -24,6 +19,7 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
+python = "^3.10"
 cookiecutter = "^2.6"
 jinja2-git = "^1.4"
 lice = "^0.6"
@@ -33,7 +29,7 @@ setuptools = "*"
 binaryornot = "^0.4"
 tomli = "^2.3"
 
-wemake-python-styleguide = "^1.4"
+wemake-python-styleguide = "^1.5"
 ruff = "^0.14"
 
 mypy = "^1.19"
