--- a/{{cookiecutter.project_name}}/docs/Makefile
+++ b/{{cookiecutter.project_name}}/docs/Makefile
@@ -2,17 +2,16 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    = -W
-SPHINXBUILD   = python -msphinx
-SPHINXPROJ    = {{cookiecutter.project_name}}
-SOURCEDIR     = .
-BUILDDIR      = _build
+SPHINXOPTS = -W
+SPHINXBUILD = python -msphinx
+SPHINXPROJ = {{cookiecutter.project_name}}
+SOURCEDIR = .
+BUILDDIR = _build
 
 # Put it first so that "make" without argument is like "make help".
+.PHONY: help
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-
-.PHONY: help Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
